[tool.poetry]
name = "warninger"
version = "0.1.0"
description = ""
authors = ["sumarokov-vp <sumarokov.vp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
psycopg = "^3.1.10"
pytest = "^7.4.0"
pytelegrambotapi = "^4.13.0"
flask = "^2.3.2"
psycopg-binary = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
]

[[tool.mypy.overrides]]
module = [
    "telebot",
    "telebot.types",
    "sqlalchemy",
    "sqlalchemy.orm",
]
ignore_missing_imports = true
